Add cleaner mappings.

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.thymeleaf.mode=HTML
 # Internationalization
 spring.messages.basename=messages/messages
 # profile for services
-spring.profiles.active=map
+spring.profiles.active=jpa
