Define active profile in properties.

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.jpa.open-in-view=true
 spring.thymeleaf.mode=HTML
 # Internationalization
 spring.messages.basename=messages/messages
+# profile for services
+spring.profiles.active=map
