--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,19 @@
 
     <build>
         <plugins>
+            <!--   for reports of code coverage -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <formats>
+                        <format>html</format>
+                        <format>xml</format>
+                    </formats>
+                    <check/>
+                </configuration>
+            </plugin>
             <!--    Enforcer    -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
