--- a/pet-clinic-web/src/test/resources/application.properties
+++ b/pet-clinic-web/src/test/resources/application.properties
@@ -1,1 +1,10 @@
 spring.profiles.active=jpa
+# connection to database
+spring.datasource.username=pet-clinic-user
+spring.datasource.password=PetClinicPassword1234@gmail.com
+spring.datasource.url=jdbc:mysql://localhost:3306/pet-clinic?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=embedded
