--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=embedded
+#spring.sql.init.mode=always
 # hikari
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.data-source-properties.cachePrepStmts=true
