--- a/pet-clinic-data/src/main/resources/application.properties
+++ b/pet-clinic-data/src/main/resources/application.properties
@@ -1,2 +1,31 @@
-spring.jpa.defer-datasource-initialization=true
+# Web
+spring.thymeleaf.mode=HTML
+# Internationalization
+spring.messages.basename=messages/messages
+# Profiles
 spring.profiles.active=jpa
+# connection to database
+spring.datasource.username=pet-clinic-user
+spring.datasource.password=PetClinicPassword1234@gmail.com
+spring.datasource.url=jdbc:mysql://localhost:3306/pet-clinic?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=embedded
+# hikari
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.data-source-properties.cachePrepStmts=true
+spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
+spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
+spring.datasource.hikari.data-source-properties.useServerPrepStmts=true
+spring.datasource.hikari.data-source-properties.useLocalSessionState=true
+spring.datasource.hikari.data-source-properties.rewriteBatchedStatements=true
+spring.datasource.hikari.data-source-properties.cacheResultSetMetadata=true
+spring.datasource.hikari.data-source-properties.cacheServerConfiguration=true
+spring.datasource.hikari.data-source-properties.elideSetAutoCommits=true
+spring.datasource.hikari.data-source-properties.maintainTimeStats=false
+# logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
